RESOLVED FIXED275128
Fix build break after 279710@main
https://bugs.webkit.org/show_bug.cgi?id=275128
Summary Fix build break after 279710@main
Said Abou-Hallawa
Reported 2024-06-04 14:30:00 PDT
279710@main caused this compilation error in Apple internal builds: Member reference type 'BitmapImageSource' is not a pointer; did you mean to use '.'? BitmapImageDescriptor.cpp:245
Attachments
Said Abou-Hallawa
Comment 1 2024-06-04 14:30:21 PDT
Said Abou-Hallawa
Comment 2 2024-06-04 14:46:53 PDT
EWS
Comment 3 2024-06-04 14:50:12 PDT
Committed 279716@main (3b9db2bc9385): <https://commits.webkit.org/279716@main> Reviewed commits have been landed. Closing PR #29518 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.