Fix build break after 279710@main https://bugs.webkit.org/show_bug.cgi?id=275128 rdar://129240808

Unreviewed build break fix.

BitmapImageDescriptor holds a reference to BitmapImageSource. So use '.' instead
of '->' operator to access m_source in shouldUseQuickLookForFullscreen().

* Source/WebCore/platform/graphics/BitmapImageDescriptor.cpp:
(WebCore::BitmapImageDescriptor::shouldUseQuickLookForFullscreen const):

Canonical link: https://commits.webkit.org/279716@main